Revert overflow clip; Fix Safari broken movementX,Y; Convert mouse event to pointer

--- a/src/VideoPlayer.module.css
+++ b/src/VideoPlayer.module.css
@@ -1,7 +1,7 @@
 .slider {
   --slider-width: 100px;
   border-radius: 1000px;;
-  overflow: clip;
+  overflow: hidden;
 }
 
 .slider::before {
