--- a/src/styles/text.module.scss
+++ b/src/styles/text.module.scss
@@ -3,7 +3,7 @@
 .small {
   cursor: default;
   text-overflow: ellipsis;
-  overflow-x: clip;
+  overflow: hidden;
   font-size: 14px;
   line-height: 20px;
   margin-top: -5px;
